# litmus

./: .gitignore  Cargo.toml
docs/: litmus.xmind  specification.md
src/: block.rs  block_header.rs  consensus.rs  crypto.rs  hash.rs  json_compatibility.rs  kernel.rs  lib.rs  merkle_proof.rs
tests/: integration.rs
tests/assets/: query_merkle_proofs.txt
tests/assets/blocks/: block-0.json  block-1.json  block-10.json  block-11.json  block-12.json  block-13.json  block-14.json  block-15.json  block-16.json  block-17.json  block-18.json  block-19.json  block-2.json  block-20.json  block-21.json  block-22.json  block-23.json  block-24.json  block-25.json  block-26.json  block-27.json  block-28.json  block-29.json  block-3.json  block-30.json  block-31.json  block-32.json  block-33.json  block-34.json  block-35.json  block-36.json  block-37.json  block-38.json  block-39.json  block-4.json  block-40.json  block-41.json  block-42.json  block-43.json  block-44.json  (+60 more)
tests/mainnet/blocks/: block-0.json
