[package]
name = "casper-litmus"
version = "0.1.0"
edition = "2021"

[dependencies]
base16 = { version = "0.2.1", default-features = false, features = ["alloc"] }
blake2b_simd = { version = "1.0.2", default-features = false }
casper-types = "4.0.1"
ed25519-dalek = { version = "2.0.0", default-features = false, features = [
    "alloc",
    "zeroize",
] }
k256 = { version = "0.13.1", default-features = false, features = [
    "ecdsa",
    "sha256",
] }
proptest = { version = "1.4.0", default-features = false, features = ["alloc"] }
proptest-derive = "0.4.0"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
time = { version = "0.3.31", default-features = false, features = [
    "serde",
    "formatting",
    "parsing",
] }

[dev-dependencies]
bincode = "1.3.3"
casper-hashing = "3.0.0"
casper-node = "1.5.6"
once_cell = "1.19.0"
serde_json = "1.0.111"
test-strategy = "0.3.1"
