[package]
name = "casper-litmus"
version = "0.1.1"
edition = "2021"

[dependencies]
base16 = { version = "0.2.1", default-features = false, features = ["alloc"] }
blake2b_simd = { version = "1.0.2", default-features = false }
casper-types = {  git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0", features = ["datasize", "json-schema", "std"] }
ed25519-dalek = { version = "2.0.0", default-features = false, features = [
    "alloc",
    "zeroize",
] }
itertools = { version = "0.12.1", default-features = false }
k256 = { version = "0.13.1", default-features = false, features = [
    "ecdsa",
    "sha256",
] }
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
serde-map-to-array = "1"
time = { version = "0.3.31", default-features = false, features = [
    "serde",
    "formatting",
    "parsing",
] }

[dev-dependencies]
bincode = "1.3.3"
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-storage = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
hex = "0.4.3"
once_cell = "1.19.0"
serde_json = "1.0.111"
test-strategy = "0.3.1"
proptest = { version = "1.4.0" }
proptest-derive = "0.4.0"
